--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
  </head>
  <body>
   <div id="container">
-   <div id="header">Сайт-звіт до лабораторних робіт студента (ки) 4 курсу групи "Менеджери"</div>
+   <div id="header">Сайт-звіт до лабораторних робіт студентки 1 курсу групи "Математики" 2020 Власової Аліни Олексіївни"</div>
   <div id="content">
-    <h2>Сайт-звіт до лабораторних робіт студента (ки) 4 курсу групи "Менеджери"</h2>
+    <h2>Сайт-звіт до лабораторних робіт студентки 1 курсу групи "Математики" 2020 Власової Аліни Олексіївни"</h2>
    </div>
    <div id="sidebar">
     <p><a href="index.html">Домашня сторінка</a></p>
