--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
    <p><a href="lab6.html">звіт до лабораторної роботи №6. Тема -  Google група</a></p>
    </div>
    <div class="clear"></div>
-   <div id="footer">&copy; Сайт-звіт до лабораторних робіт студента (ки) 4 курсу групи "Менеджери"</div>
+   <div id="footer">&copy; Сайт-звіт до лабораторних робіт студентки 1 курсу "Математики" 2020 Власової Аліни Олексіївни"</div>
   </div>
  </body>
 </html>
