--- a/lab1.html
+++ b/lab1.html
@@ -1,62 +1,62 @@
-<! doctype html >
-< html >
- < голова >
-  < meta  charset = " utf-8 " />
-  < title > Сайт-звіт до лабораторных робіт студентки 1 курсу групи "Математики" 2020 Власової Аліни Олексіївни " </ title >
-  < style  type = " text / css " >
+<!doctype html>
+<html>
+ <head>
+  <meta charset="utf-8" />
+  <title>Сайт-звіт до лабораторних робіт студентки 1 курсу групи "Математики" 2020 Власової Аліни Олексіївни"</title>
+  <style type="text/css">
    body {
-    шрифт : Arial , Helvetica , 10 пт , без засечек; / * Шрифт на веб-странице * /
-    фон : # 54463d ; / * Цвет фона * /
-    маржа : 0 ; / * Убираем отступы * /
+    font: 10pt Arial, Helvetica, sans-serif; /* Шрифт на веб-странице */
+    background: #54463d; /* Цвет фона */
+    margin: 0; /* Убираем отступы */
    }
    h2 {
-    Размер шрифта : 1,1 эм ; / * Размер шрифта * /
-    цвет : # 752641 ; / * Цвет текста * /
-    нижнее поле : 0 ; / * Отступ снизу * /
+    font-size: 1.1em; /* Размер шрифта */
+    color: #752641; /* Цвет текста */
+    margin-bottom: 0; /* Отступ снизу */
    }
-   # container {
-    ширина : 100 % ; / * Ширина макета * /
-    маржа : 0 авто; / * Выравниваем по центру * /
-    фон : # f0f0f0 ; / * Цвет фона правой колонки * / 
+   #container {
+    width: 100%; /* Ширина макета */
+    margin: 0 auto; /* Выравниваем по центру */
+    background: #f0f0f0; /* Цвет фона правой колонки */ 
    }
-   # header {
-    фон : # 8fa09b ; / * Цвет фона * /
-    размер шрифта : 24 пт ; / * Размер текста * /
-    font-weight : жирный; / * Жирное начертание * /
-    цвет : # edeed5 ; / * Цвет текста * /
-    отступ : 5 пикселей ; / * Отступы вокруг текста * /
+   #header {
+    background: #8fa09b; /* Цвет фона */
+    font-size: 24pt; /* Размер текста */
+    font-weight: bold; /* Жирное начертание */
+    color: #edeed5; /* Цвет текста */
+    padding: 5px; /* Отступы вокруг текста */
    }
-   # content {
-    float : left; / * Обтекание по правому краю * /
-    ширина : 80 % ; / * Ширина левой колонки * /
-    отступ : 10 пикселей ; / * Поля вокруг текста * /
-    бордюр направо : 1 ПВ пунктирной # 183533 ; / * Линия справа * /
-    фон : # fff ; / * Цвет фона левой колонки * /
+   #content {
+    float: left; /* Обтекание по правому краю */
+    width: 80%; /* Ширина левой колонки */
+    padding: 10px; /* Поля вокруг текста */
+    border-right: 1px dashed #183533; /* Линия справа */
+    background: #fff; /* Цвет фона левой колонки */
    }
-   # content  p {
-    margin-top : 0.3 em  / * Отступ сверху * /
+   #content p {
+    margin-top: 0.3em /* Отступ сверху */
    }
-   # sidebar {
-    float : left; / * Обтекание по правому краю * /
-    ширина : 120 пикселей ; / * Ширина * /
-    отступ : 10 пикселей ; / * Отступы вокруг текста * /
+   #sidebar {
+    float: left; /* Обтекание по правому краю */
+    width: 120px; /* Ширина */
+    padding: 10px; /* Отступы вокруг текста */
    }
-   # footer {
-    фон : # 8fa09b ; / * Цвет фона * /
-    цвет : # fff ; / * Цвет текста * /
-    отступ : 5 пикселей ; / * Отступы вокруг текста * /
+   #footer {
+    background: #8fa09b; /* Цвет фона */
+    color: #fff; /* Цвет текста */
+    padding: 5px; /* Отступы вокруг текста */
    }
-   . clear {
-    ясно : оба; / * Отмена обтекания * / 
+   .clear { 
+    clear: both; /* Отмена обтекания */ 
    }
-  </ стиль >
- </ голова >
- < тело >
-  < div  id = " container " >
-   < div  id = " header " > Сайт-звіт до лабораторных робіт студентки 1 курсу групи "Математики" 2020 Власової Аліни Олексіївни " </ div >
-  < div  id = " content " > 
-< h2 >1. Номер і тема лабораторної роботи
-< h2 >звіт до лабораторної роботи №1. Тема - Формування за зразком</h2> 
+  </style>
+ </head>
+ <body>
+  <div id="container">
+   <div id="header">Сайт-звіт до лабораторних робіт студентки 1 курсу групи "Математики" 2020 Власової Аліни Олексіївни"</div>
+  <div id="content">
+    <h2>1. Номер і тема лабораторної роботи
+<h2>звіт до лабораторної роботи №1. Тема - Формування за зразком</h2> 
 3. iframe з результатом у pdf або html форматі 
 <p>3. <iframe src="lab1.pdf" width="500" height="700"></iframe></p> 
 4. Посилання на Google диск для перегляду результату
@@ -68,19 +68,19 @@
  6.1. Рідний формат для редактору Microsoft Office. 
  <p>6.1 <a href="lab1.docx">Формат Microsoft (*.docx)</a></p> 
 6.2. Рідний формат для редактору Libre (Open) Office.
- <p>6.2 <a href="lab1.odt">Формат Open Office (*.odt)</a></p> 
-   </ div >
-   < div  id = " sidebar " >
-    < Р > < HREF = " index.html " > Домашня сторінка </ > </ р > 
-    < Р > < HREF = " lab1.html " > звіт до лабораторної роботи №1. Тема - Текстовий процесор </ a > </ p > 
-    < Р > < HREF = " lab2.html " > звіт до лабораторної роботи №2. Тема - Google презентація </ a > </ p > 
-    < Р > < HREF = " lab3.html " > звіт до лабораторної роботи №3. Тема - Google малюнок </ a > </ p > 
-    < Р > < HREF = " lab4.html " > звіт до лабораторної роботи №4. Тема - Google форма-опитування </ a > </ p > 
-   < Р > < HREF = " lab5.html " > звіт до лабораторної роботи №5. Тема - Google форма-тестування </ a > </ p > 
-   < Р > < HREF = " lab6.html " > звіт до лабораторної роботи №6. Тема - Google група </ a > </ p > 
-   </ div >
-   < div  class = " clear " > </ div >
-   < div  id = " footer " > & copy; Сайт-звіт до лабораторных робіт студентки 1 курсу "Математики" 2020 Власової Аліни Олексіївни " </ div >
-  </ div >
- </ body >
-</ html >
+ <p>6.2 <a href="lab1.odt">Формат Open Office (*.odt)</a></p> Сайт-звіт до лабораторних робіт студентки 1 курсу групи "Математики" 2020 Власової Аліни Олексіївни"</h2>
+   </div>
+   <div id="sidebar">
+    <p><a href="index.html">Домашня сторінка</a></p>
+    <p><a href="lab1.html">звіт до лабораторної роботи №1. Тема - Текстовий процесор</a></p>
+    <p><a href="lab2.html">звіт до лабораторної роботи №2. Тема - Google презентація</a></p>
+    <p><a href="lab3.html">звіт до лабораторної роботи №3. Тема - Google малюнок</a></p>
+    <p><a href="lab4.html">звіт до лабораторної роботи №4. Тема - Google форма-опитування</a></p>
+   <p><a href="lab5.html">звіт до лабораторної роботи №5. Тема - Google форма-тестування</a></p>
+   <p><a href="lab6.html">звіт до лабораторної роботи №6. Тема -  Google група</a></p>
+   </div>
+   <div class="clear"></div>
+   <div id="footer">&copy; Сайт-звіт до лабораторних робіт студентки 1 курсу "Математики" 2020 Власової Аліни Олексіївни"</div>
+  </div>
+ </body>
+</html>
