--- a/lab1.html
+++ b/lab1.html
@@ -61,7 +61,7 @@
 <p>3. <iframe src="lab1.pdf" width="500" height="700"></iframe></p> 
 4. Посилання на Google диск для перегляду результату
 
-<p>4. <a href="https://drive.google.com/file/d/1-qSt0Ly_LgkXTidaJdBhMYMJj4_ais7E/view?usp=sharing">Посилання на Гугл диск</a></p> 
+<p>4. <a href="https://docs.google.com/document/d/1yrr2Fd7AFVAVJJK-9XrWjOT0PaWv03ITJPljxBdlL1U/edit?usp=sharing">Посилання на Гугл диск</a></p> 
 
 5. OneDrive для перегляду результату
 <p>5. <a href="https://drive.google.com/file/d/1-qSt0Ly_LgkXTidaJdBhMYMJj4_ais7E/view?usp=sharing">Посилання на OneDrive</a></p> 
