--- a/lab1.html
+++ b/lab1.html
@@ -55,19 +55,22 @@
   <div id="container">
    <div id="header">Сайт-звіт до лабораторних робіт студентки 1 курсу групи "Математики" 2020 Власової Аліни Олексіївни"</div>
   <div id="content">
-    <h2>1. Номер і тема лабораторної роботи
+   1. Номер і тема лабораторної роботи
 <h2>звіт до лабораторної роботи №1. Тема - Формування за зразком</h2> 
 3. iframe з результатом у pdf або html форматі 
 <p>3. <iframe src="lab1.pdf" width="500" height="700"></iframe></p> 
 4. Посилання на Google диск для перегляду результату
+
 <p>4. <a href="https://docs.google.com/document/d/1yrr2Fd7AFVAVJJK-9XrWjOT0PaWv03ITJPljxBdlL1U/edit?usp=sharing">Посилання на Гугл диск</a></p> 
 
 5. OneDrive для перегляду результату
-<p>5. <a href="https://pnpu-my.sharepoint.com/:w:/g/personal/vlasova_ao_pdpu_edu_ua/EWyh4zi3yPtIl1lofYwKkToBKuD9ZkrKGJ6BQOwzi6aMbg?e=0XjjjN">Посилання на OneDrive</a></p> 
+<p>5. <https://drive.google.com/file/d/1-qSt0Ly_LgkXTidaJdBhMYMJj4_ais7E/view?usp=sharing">Посилання на OneDrive</a></p> 
  6.1. Рідний формат для редактору Microsoft Office. 
  <p>6.1 <a href="lab1.docx">Формат Microsoft (*.docx)</a></p> 
 6.2. Рідний формат для редактору Libre (Open) Office.
- <p>6.2 <a href="lab1.odt">Формат Open Office (*.odt)</a></p> Сайт-звіт до лабораторних робіт студентки 1 курсу групи "Математики" 2020 Власової Аліни Олексіївни"</h2>
+ <p>6.2 <a href="lab1.odt">Формат Open Office (*.odt)</a></p> 
+
+    <h2>Сайт-звіт до лабораторних робіт студентки 1 курсу групи "Математики" 2020 Власової Аліни Олексіївни"</h2>
    </div>
    <div id="sidebar">
     <p><a href="index.html">Домашня сторінка</a></p>
