--- a/lab1.html
+++ b/lab1.html
@@ -64,12 +64,11 @@
 <p>4. <a href="https://docs.google.com/document/d/1yrr2Fd7AFVAVJJK-9XrWjOT0PaWv03ITJPljxBdlL1U/edit?usp=sharing">Посилання на Гугл диск</a></p> 
 
 5. OneDrive для перегляду результату
-<p>5. <a href="https://pnpu-my.sharepoint.com/:w:/g/personal/vlasova_ao_pdpu_edu_ua/EWyh4zi3yPtIl1lofYwKkToBKuD9ZkrKGJ6BQOwzi6aMbg?e=bAktb6">Посилання на OneDrive</a></p> 
+<p>5. <a href="https://pnpu-my.sharepoint.com/:w:/g/personal/vlasova_ao_pdpu_edu_ua/EWyh4zi3yPtIl1lofYwKkToBKuD9ZkrKGJ6BQOwzi6aMbg?e=SIbITE">Посилання на OneDrive</a></p> 
  6.1. Рідний формат для редактору Microsoft Office. 
  <p>6.1 <a href="lab1.docx">Формат Microsoft (*.docx)</a></p> 
 6.2. Рідний формат для редактору Libre (Open) Office.
  <p>6.2 <a href="lab1.odt">Формат Open Office (*.odt)</a></p> 
-
     <h2>Сайт-звіт до лабораторних робіт студентки 1 курсу групи "Математики" 2020 Власової Аліни Олексіївни"</h2>
    </div>
    <div id="sidebar">
