--- a/lab1.html
+++ b/lab1.html
@@ -72,7 +72,7 @@
     <h2>Сайт-звіт до лабораторних робіт студентки 1 курсу групи "Математики" 2020 Власової Аліни Олексіївни"</h2>
    
    1. Номер і тема лабораторної роботи
-<h2>звіт до лабораторної роботи №2. Тема - Текстовий процесор. Формування за зразком</h2> 
+<h2>звіт до лабораторної роботи №2. Тема - Google презентація</h2> 
 3. iframe з результатом у pdf або html форматі 
 <p>3. <iframe src="lab1.pdf" width="500" height="700"></iframe></p> 
 4. Посилання на Google диск для перегляду результату
