--- a/lab2.2.html
+++ b/lab2.2.html
@@ -56,7 +56,7 @@
    <div id="header">Сайт-звіт до лабораторних робіт студентки 1 курсу групи "Математики" 2020 Власової Аліни Олексіївни"</div>
   <div id="content">
   1. Номер і тема лабораторної роботи
-<h2>звіт до лабораторної роботи №2.2. Тема - Табличний процесор Формули</h2> 
+<h2>звіт до лабораторної роботи №2.2. Тема - Табличний процесор Використання формул</h2> 
 3. iframe з результатом у pdf або html форматі 
 <p>3. <iframe src="lab2.2.pdf" width="500" height="700"></iframe></p> 
 4. Посилання на Google диск для перегляду результату
@@ -76,7 +76,7 @@
     <p><a href="lab1.html">звіт до лабораторної роботи №1. Тема - Текстовий процесор</a></p>
     <p><a href="lab1.2.html">звіт до лабораторної роботи №1.2. Тема - Текстовий процесор Формування за зразком</a></p>
     <p><a href="lab2.html">звіт до лабораторної роботи №2. Тема - Табличний процесор Основи </a></p>
-    <p><a href="lab2.2.html">звіт до лабораторної роботи №2.2. Тема - Табличний процесор Формули</a></p>
+    <p><a href="lab2.2.html">звіт до лабораторної роботи №2.2. Тема - Табличний процесор Використання формул</a></p>
    <p><a href="lab5.html">звіт до лабораторної роботи №5. Тема - Google форма-тестування</a></p>
    <p><a href="lab6.html">звіт до лабораторної роботи №6. Тема -  Google група</a></p>
    </div>
