--- a/lab4.html
+++ b/lab4.html
@@ -64,7 +64,7 @@
 <p>4. <a href="https://drive.google.com/file/d/1ttmGLxFxL6zZCEzfyA5ut3qYF8A-0Xm6/view?usp=sharing">Посилання на Гугл диск</a></p> 
 
 5. OneDrive для перегляду результату
-<p>5. <a href="https://pnpu-my.sharepoint.com/:x:/g/personal/vlasova_ao_pdpu_edu_ua/EaOBpWQ_hZpDirA34e13A7sB2WkaIgpCRvY1nFZyRtKqHQ?e=dmRNn8">Посилання на OneDrive</a></p> 
+<p>5. <a href="https://pnpu-my.sharepoint.com/:x:/g/personal/vlasova_ao_pdpu_edu_ua/EVmmR8_DL8ZHi-0cZ1t-lPUB849IPPJWARFP5CwmSjKaBQ?e=AfQfRE">Посилання на OneDrive</a></p> 
  6.1. Рідний формат для редактору Microsoft Excel. 
  <p>6.1 <a href="lab4.xlsx">Формат Microsoft (*.xlsx)</a></p> 
 6.2. Рідний формат для редактору Libre (Calc) Office.
