--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
     <p><a href="lab3.html">звіт до лабораторної роботи №3. Тема - Табличний процесор Використання формул</a></p>
    <p><a href="lab4.html">звіт до лабораторної роботи №4. Тема - Абсолютна адресація</a></p>
    <p><a href="lab5.html">звіт до лабораторної роботи №5. Тема -  Презентація</a></p>
+   <p><a href="lab6.html">звіт до лабораторної роботи №6. Тема -  Комп'ютерна графіка</a></p>
    </div>
    <div class="clear"></div>
    <div id="footer">&copy; Сайт-звіт до лабораторних робіт студентки 1 курсу "Математики" 2020 Власової Аліни Олексіївни"</div>
