--- a/lab6.html
+++ b/lab6.html
@@ -57,7 +57,7 @@
    <div id="header">Сайт-звіт до лабораторних робіт студентки 1 курсу групи "Математики" 2020 Власової Аліни Олексіївни"</div>
   <div id="content">
   1. Номер і тема лабораторної роботи
-<h2>звіт до лабораторної роботи №3. Тема - Табличний процесор Використання формул</h2> 
+<h2>звіт до лабораторної роботи №6. Тема - Комп'ютерна графіка</h2> 
 3. iframe з результатом у pdf або html форматі 
 <p>3. <iframe src="lab6.pdf" width="500" height="700"></iframe></p> 
 4. Посилання на Google диск для перегляду результату
