--- a/lab6.html
+++ b/lab6.html
@@ -62,7 +62,7 @@
 <p>3. <iframe src="lab6.pdf" width="500" height="700"></iframe></p> 
 4. Посилання на Google диск для перегляду результату
 
-<p>4. <a href="https://docs.google.com/drawings/d/1wJ0zroEwssHvVPcycHDoDoB0LrWYikt2R4ubGjdR0_I/edit?usp=sharing">Посилання на Гугл диск</a></p> 
+<p>4. <a href="https://docs.google.com/drawings/d/1wJ0zroEwssHvVPcycHDoDoB0LrWYikt2R4ubGjdR0_I/view">Посилання на Гугл диск</a></p> 
  
  5.1. Рідний формат для Microsoft Office Picture Manager. 
  <p>5.1 <a href="lab6.jpg">Формат Microsoft (*.jpg)</a></p> 
