--- a/lab7.html
+++ b/lab7.html
@@ -63,8 +63,10 @@
 <p>2. <a href="https://forms.gle/rLruuspPChwiCERm6">Посилання на Гугл диск</a></p> 
  3. Посилання на OneDrive для перегляду результату
       <p>3. <a href="https://forms.office.com/Pages/ResponsePage.aspx?id=StMNzR0mMkWyyGUC8WoY3P1FgVa61vhMqMGKXsJlsmFURVlTV05TWVVWNU8yNzBNV0ZTSEI5NEhOUy4u">Посилання на OneDrive</a></p>
- 4.Таблиця з результатами 
-   <p>4. <a href="https://docs.google.com/spreadsheets/d/1mzcsXeBQ0ONV2DDKMhY99AtotgWqok7zelikjCXje8g/edit?usp=sharing">Таблиця з результатами</a></p> 
+ 4.Таблиця з результатами Google диск
+   <p>4. <a href="https://docs.google.com/spreadsheets/d/1mzcsXeBQ0ONV2DDKMhY99AtotgWqok7zelikjCXje8g/edit?usp=sharing">Таблиця з результатами Google диск</a></p> 
+   5.Таблиця з результатами OneDrive
+   <p>5. <a href="https://pnpu-my.sharepoint.com/:x:/g/personal/vlasova_ao_pdpu_edu_ua/EVU8ffFgtfpCrzBie_bmVVYBCYhHQtjsSLn-ct6Tb4AfNw?e=mlypCa">Таблиця з результатами OneDrive</a></p> 
     
     <h2>Сайт-звіт до лабораторних робіт студентки 1 курсу групи "Математики" 2020 Власової Аліни Олексіївни"</h2>
    </div>
